# babygrad

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  justfile  main.py  pyproject.toml
.github/workflows/: run-tests.yml
babygrad/: aliases.py  autograd.py  data.py  formatting.py  kernels.py  lib.py  metrics.py  nn.py  observer.py  observers.py  ops.py  plot.py  recorder.py  state.py  tensor.py  text.py  tracing.py  types.py
babygrad/nn/: __init__.py  activations.py  initializers.py  losses.py  model.py  modules.py  optimizers.py  schedulers.py
babygrad/viz/: README.md  _theme.py  attribution.py  graph.py  graph_json.py  node_stats.py  plot.py  serve.py  tracer.py
babygrad/viz/static/: dashboard.js  index.html  popup.js  stream.js  theme.json
babygrad/viz/static/plots/: cache.js  controls.js  diagnostics.js  dom.js  format.js  grouping.js  main.js  plot-lib.js  registry.js  util.js  (+1 more)
data/: README.md  categorical_targets.csv  concentric_circles.csv  continuous_targets.csv  generate_concentric_circles.py  generate_mixed_targets.py  mixed_targets.csv
notebooks/: phase1_tensor_foundations.ipynb  phase2_forward_nn_primitives.ipynb  phase3_autograd.ipynb  phase4_optimization_training.ipynb  phase5_visualization.ipynb  phase6_data_pipeline.ipynb  phase7_residual_networks.ipynb
tests/: attribution_test.py  autograd_test.py  data_test.py  formatting_test.py  graph_json_test.py  graph_test.py  lib_test.py  model_test.py  nn_test.py  node_stats_test.py  ops_test.py  plot_test.py  recorder_test.py  schedulers_test.py  serve_test.py  tensor_test.py  tracer_test.py
(+4 files in other folders)
