[project]
name = "babygrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.pyright]
include = [
    "babygrad",
]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
extraPaths = [
    ".venv/lib/python3.14/site-packages",
]
