[project]
name = "babygrad"
version = "0.1.0"
description = "just a baby neural network library"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.9",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "nbconvert>=7.16.0",
    "pip>=25.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["babygrad"]

[tool.uv]
required-version = "0.9.30"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
]

[tool.pyright]
include = [
    "babygrad",
]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
